// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders nothing if no opportunities 1`] = `
<div
  id="opportunities_parent"
  onKeyDown={[Function]}
  style={
    Object {
      "maxHeight": "none",
    }
  }
>
  <CloseButton
    buttonRef={[Function]}
    margin="0"
    offset="x-small"
    onClick={[Function]}
    placement="end"
    size="small"
    variant="icon"
  >
    Close Opportunity Center popup
  </CloseButton>
  <TabList
    defaultSelectedIndex={0}
    focus={false}
    variant="minimal"
  >
    <TabPanel
      id={null}
      labelledBy={null}
      maxHeight="auto"
      padding="small"
      selected={false}
      tabRef={[Function]}
      title={
        <AccessibleContent
          alt="New Opportunities"
          as="span"
        >
          New
        </AccessibleContent>
      }
      variant="simple"
    >
      <div>
        Nothing new needs attention.
      </div>
    </TabPanel>
    <TabPanel
      id={null}
      labelledBy={null}
      maxHeight="auto"
      padding="small"
      selected={false}
      tabRef={[Function]}
      title={
        <AccessibleContent
          alt="Dismissed Opportunities"
          as="span"
        >
          Dismissed
        </AccessibleContent>
      }
      variant="simple"
    >
      <div>
        Nothing here needs attention.
      </div>
    </TabPanel>
  </TabList>
</div>
`;

exports[`renders the base component correctly with one of each kind of opportunity 1`] = `
<div
  id="opportunities_parent"
  onKeyDown={[Function]}
  style={
    Object {
      "maxHeight": "none",
    }
  }
>
  <CloseButton
    buttonRef={[Function]}
    margin="0"
    offset="x-small"
    onClick={[Function]}
    placement="end"
    size="small"
    variant="icon"
  >
    Close Opportunity Center popup
  </CloseButton>
  <TabList
    defaultSelectedIndex={0}
    focus={false}
    variant="minimal"
  >
    <TabPanel
      id={null}
      labelledBy={null}
      maxHeight="auto"
      padding="small"
      selected={false}
      tabRef={[Function]}
      title={
        <AccessibleContent
          alt="New Opportunities"
          as="span"
        >
          New
        </AccessibleContent>
      }
      variant="simple"
    >
      <ol>
        <li
          key="1"
        >
          <Animatable(Opportunity)
            animatableIndex={0}
            courseName="Course Short Name"
            dismiss={[Function]}
            dueAt="2017-03-09T20:40:35Z"
            id="1"
            opportunityTitle="learning object title"
            timeZone="America/Denver"
            url="http://www.non_default_url.com"
          />
        </li>
      </ol>
    </TabPanel>
    <TabPanel
      id={null}
      labelledBy={null}
      maxHeight="auto"
      padding="small"
      selected={false}
      tabRef={[Function]}
      title={
        <AccessibleContent
          alt="Dismissed Opportunities"
          as="span"
        >
          Dismissed
        </AccessibleContent>
      }
      variant="simple"
    >
      <ol>
        <li
          key="2"
        >
          <Animatable(Opportunity)
            animatableIndex={0}
            courseName="Course Short Name"
            dismiss={null}
            dueAt="2017-03109T20:40:35Z"
            id="2"
            opportunityTitle="another learning object title"
            timeZone="America/Denver"
            url="http://www.non_default_url.com"
          />
        </li>
      </ol>
    </TabPanel>
  </TabList>
</div>
`;

exports[`renders the right course with the right opportunity 1`] = `
<div
  id="opportunities_parent"
  onKeyDown={[Function]}
  style={
    Object {
      "maxHeight": "none",
    }
  }
>
  <CloseButton
    buttonRef={[Function]}
    margin="0"
    offset="x-small"
    onClick={[Function]}
    placement="end"
    size="small"
    variant="icon"
  >
    Close Opportunity Center popup
  </CloseButton>
  <TabList
    defaultSelectedIndex={0}
    focus={false}
    variant="minimal"
  >
    <TabPanel
      id={null}
      labelledBy={null}
      maxHeight="auto"
      padding="small"
      selected={false}
      tabRef={[Function]}
      title={
        <AccessibleContent
          alt="New Opportunities"
          as="span"
        >
          New
        </AccessibleContent>
      }
      variant="simple"
    >
      <ol>
        <li
          key="1"
        >
          <Animatable(Opportunity)
            animatableIndex={0}
            courseName="Course Short Name"
            dismiss={[Function]}
            dueAt="2017-03-09T20:40:35Z"
            id="1"
            opportunityTitle="learning object title"
            timeZone="America/Denver"
            url="http://www.non_default_url.com"
          />
        </li>
        <li
          key="2"
        >
          <Animatable(Opportunity)
            animatableIndex={1}
            courseName="A different Course Name"
            dismiss={[Function]}
            dueAt="2017-03-09T20:40:35Z"
            id="2"
            opportunityTitle="other learning object"
            timeZone="America/Denver"
            url="http://www.non_default_url.com"
          />
        </li>
      </ol>
    </TabPanel>
    <TabPanel
      id={null}
      labelledBy={null}
      maxHeight="auto"
      padding="small"
      selected={false}
      tabRef={[Function]}
      title={
        <AccessibleContent
          alt="Dismissed Opportunities"
          as="span"
        >
          Dismissed
        </AccessibleContent>
      }
      variant="simple"
    >
      <ol>
        <li
          key="2"
        >
          <Animatable(Opportunity)
            animatableIndex={0}
            courseName="Course Short Name"
            dismiss={null}
            dueAt="2017-03109T20:40:35Z"
            id="2"
            opportunityTitle="another learning object title"
            timeZone="America/Denver"
            url="http://www.non_default_url.com"
          />
        </li>
      </ol>
    </TabPanel>
  </TabList>
</div>
`;
